# pyphysics

./: .gitignore  README.md  requirements.txt
MPC/: .gitignore  CMakeLists.txt  Dockerfile  MecanumMPC  mecanum_data.py  mpc_drive_simulator.py  mpc_with_forces.py  musl_compat.h  requirements.txt  run_solver.c  solver_test.py
MPC/mecanum_mpc/: mecanum_mpc.m  mecanum_mpc_interface.c  mecanum_mpc_model.c
MPC/mecanum_mpc/include/: mecanum_mpc.h  mecanum_mpc_memory.h
MPC/mecanum_mpc/interface/: COPYING.m  definitions.py  definitions_eval.py  mecanum_mpcBuildable.m  mecanum_mpc_build.py  mecanum_mpc_coderFunction.m  mecanum_mpc_coderFunctioncompact.m  mecanum_mpc_createCoderMatlabFunction.m  mecanum_mpc_dynamics_mex.c  mecanum_mpc_inequalities_mex.c  mecanum_mpc_lib.mdl  mecanum_mpc_mex.c  mecanum_mpc_objective_mex.c  mecanum_mpc_py.py  mecanum_mpc_simulinkBlock.c  mecanum_mpc_simulinkBlockcompact.c  mecanum_mpccompact_lib.mdl
Mecanum_Drive/: .gitignore  assorted_funnies.py  differential_slides.py  drive_comparison.py  drive_descent_tune.py  drive_log_reader.py  drivetrain_uniform_step.csv  gradient_descent  gradient_descent_biger  mecanum_drive.py  mecanum_drive_log.csv  motor_comparison.py  motor_driven_diffslides.py  motor_driven_drivetrain.py  motor_param_tune.py  motor_simulation.py  mpc_drive_simulator.py  mpc_with_forces.py  rotation_drive_log.csv  test_center_of_mass.py  test_drive_comparison.py  test_drivetrain_controller.py  test_matrix_analytic.py  test_odometry.py  test_odometry_noise.py  test_read_mpc_log.py  test_time_integrate.py
Mecanum_Drive/drive_samples/: r2_diagon.csv  r2_spin.csv  r2_x.csv  r2_xspin.csv  r2_y.csv  (+1 more)
Mecanum_MPC/: .gitignore  drive_simulation.py  ida_helper.py  mpc_with_forces.py
Random_Variable/: 1d_gaussian.py  1d_kalman_filter.py  2d_kalman_filter_shm.py  central_limit_theorem.py  ekf_pendulum.py  multivariate_gaussian.py
Simple_ODE/: cart_and_pole.py  exponetial_decay.py  single_pendulum.py  single_pendulum_ef.py  single_pendulum_ef_animate.py  single_pendulum_mpc.py  single_pendulum_scipy.py  single_pendulum_vv.py
(+30 files in other folders)
